--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="@dimen/marginRight"
         android:layout_marginBottom="@dimen/marginBottom"
         android:text="Plan Your Schedule"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -60,6 +60,7 @@
         android:layout_marginTop="@dimen/marginTop"
         android:layout_marginEnd="@dimen/marginRight"
         android:layout_marginBottom="@dimen/marginBottom"
+        android:onClick="begin"
         android:text="Begin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
