--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -193,5 +193,17 @@
         app:layout_constraintTop_toBottomOf="@+id/radioButton6"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:textSize="@dimen/textSize"
+        android:onClick="generate"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.841" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
