--- a/app/src/main/res/layout/activity_info2.xml
+++ b/app/src/main/res/layout/activity_info2.xml
@@ -9,6 +9,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SEE SCHEDULE"
+
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
