--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/marginLeft"
         android:layout_marginTop="@dimen/marginTop"
-        android:layout_marginEnd="@dimen/marginRight"
         android:layout_marginBottom="@dimen/marginBottom"
         android:text="Plan Your Schedule"
         android:textColor="@color/black"
@@ -21,7 +19,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.072" />
 
     <TextView
         android:id="@+id/textView4"
@@ -43,16 +41,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/marginLeft"
         android:layout_marginTop="@dimen/marginTop"
-        android:layout_marginBottom="@dimen/marginBottom"
         android:layout_marginEnd="@dimen/marginRight"
+        android:layout_marginBottom="@dimen/marginBottom"
         android:text="@string/hint"
         android:textSize="@dimen/textSize"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.179" />
 
-    <Button
+    <ImageButton
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,12 +61,14 @@
         android:layout_marginEnd="@dimen/marginRight"
         android:layout_marginBottom="@dimen/marginBottom"
         android:onClick="begin"
-        android:text="Begin"
+        android:src="@drawable/arrow_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.95" />
+        app:layout_constraintVertical_bias="0.892" />
+
 
     <TextView
         android:id="@+id/textView2"
@@ -80,10 +82,10 @@
         android:textSize="@dimen/textSize"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.390" />
-
+        app:layout_constraintVertical_bias="0.368" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -98,8 +100,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.176">
-    </Spinner>
+        app:layout_constraintVertical_bias="0.06"></Spinner>
 
     <TextView
         android:id="@+id/textView3"
@@ -125,15 +126,15 @@
         android:layout_marginTop="@dimen/marginTop"
         android:layout_marginEnd="@dimen/marginRight"
         android:layout_marginBottom="@dimen/marginBottom"
+        android:id="@+id/spinner2"
         android:entries="@array/bedTime_array"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.230">
+        app:layout_constraintVertical_bias="0.198">
 
     </Spinner>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
