--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,11 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
+
+    <color name="colorPrimary2">#DF5886</color>
+    <color name="colorPrimaryDark2">#702B43</color>
+    <color name="colorAccent2">#EEAEC4</color>
+    <color name="colorGrey">#666B6B</color>
+    <color name="colorTint">#77EEAEC4</color>
+
 </resources>
